# velociraptor-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  README_MCP.md  example.env  main.py  pyproject.toml  requirements.txt  velociraptor_mcp_plan.md
.github/workflows/: ci.yml
mcp_server/: __init__.py  client.py  config.py  server.py  utils.py
mcp_server/prompts/: __init__.py  incident_response.py
mcp_server/resources/: __init__.py  artifact_catalog.py  vql_templates.py
mcp_server/tools/: __init__.py  artifacts.py  clients.py  files.py  hunts.py  monitoring.py  vql.py
scripts/: release.py
tests/: test_mcp_server.py  test_tools_calls.py
velociraptor_lab/: .env.example  .gitignore  README.md  podman-compose.yml  test_api.py
velociraptor_lab/client/: Dockerfile  entrypoint.sh
velociraptor_lab/server/: Dockerfile  entrypoint.sh
