[build-system]
requires = ["setuptools==75.1.0", "wheel==0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "velociraptor-mcp-server"
version = "0.1.5"
description = "FastMCP server that exposes Velociraptor APIs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Velociraptor MCP maintainers" }]
license = { file = "LICENSE" }
keywords = ["velociraptor", "mcp", "fastmcp", "ir", "dfir", "forensics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp",
    "pyvelociraptor",
    "pydantic",
    "python-dotenv",
    "grpcio",
    "grpcio-tools",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
velociraptor-mcp = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.setuptools]
py-modules = ["main"]
