[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velociraptor-mcp-server"
version = "0.1.9"
description = "FastMCP server that exposes Velociraptor APIs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Velociraptor MCP maintainers" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["velociraptor", "mcp", "fastmcp", "ir", "dfir", "forensics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastmcp",
    "pyvelociraptor",
    "pydantic",
    "python-dotenv",
    "grpcio",
    "grpcio-tools",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
velociraptor-mcp = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["mcp_server", "mcp_server.tools", "mcp_server.resources", "mcp_server.prompts"]
